# Quantization

./: .gitignore  README.md  pyproject.toml
config/: feishu_webhook.txt  minute_stock_pool.csv  position_stock_pool.csv  stock_pool.csv  tushare_token.txt
models/: factor_params.json  limitup_logistic.json  limitup_logistic.metrics.json
quant_limitup/: __init__.py  accuracy.py  backtest.py  candidate_review.py  cli.py  config.py  data.py  emailing.py  features.py  filters.py  intraday_features.py  messaging.py  model.py  paper.py  providers.py  reports.py  strategy.py  walk_forward.py
reports/: backtest_summary.json  backtest_trades.csv  candidate_review_2026-06-17.json  candidate_review_2026-06-18.json  candidate_review_2026-06-22.json  candidates_displayed_2026-06-17.csv  candidates_displayed_2026-06-18.csv  com.quant.limitup.buy.plist  com.quant.limitup.daily.plist  com.quant.limitup.sell-force.plist  com.quant.limitup.sell-morning.plist  dashboard.html  latest_rank.csv  learning_report.json  paper_daily_summary.json  rank_history.csv  strategy_optimization.json  today_rank_all.csv  today_recommendations.csv  walk_forward_summary.json  walk_forward_trades.csv
tests/: test_pipeline.py
